Page Positioning Fix
Header would overlap content on the main page because the container of
the stickNav wasn't updating to the height of the header itself. Fixed
w/ a media query.

--- a/css/style.css
+++ b/css/style.css
@@ -700,6 +700,14 @@ body{
   line-height:1.6;
   color: #414141;
 }
+.stuck{
+  height:108px;
+}
+@media(max-width:1000px){
+  .stuck{
+    height:60px;
+  }
+}
 /* Utilities */
 
 .cf:before,
